@@ -54,6 +54,11 @@ class PhotoImage(object):
         else:
             return True
 
+    def check_mouse_on_window(self):
+        window, x, y = gtk.gdk.window_at_pointer() or [None, None, None]
+        result = window is self.image.window
+        return result
+
     def _get_max_display_size(self):
         width = self.conf.get_int('max_width') or 400
         height = self.conf.get_int('max_height') or 300
